# whatsapp_automation

./: app.py  data.csv  pyproject.toml
