[project]
name = "whatsapp-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "selenium>=4.44.0",
    "streamlit>=1.58.0",
    "webdriver-manager>=4.1.2",
]
